# agents-company

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
apps/discord_layer/: audit_server.py  clients.py  config.py  reactions.py  setup_server.py  transport.py
apps/orchestrator/: artifacts.py  config.py  cost_tracker.py  graph.py  i18n.py  listener.py  permissions.py  personas.py  run.py  state.py  transport.py
apps/orchestrator/agents/: analyst.py  base.py  ceo.py  coo.py  finance.py  growth.py  pmm.py
apps/orchestrator/tools/: kb.py  web_search.py
infra/litellm/: config.yaml
infra/postgres/: init.sql
scripts/: down.sh  logs.sh  up.sh
tests/: test_discord_layer.py  test_smoke.py
tests/e2e/: test_dry_run_sprint.py
